--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <title>Sathya Weds Shruthi</title>
 
   
-  <meta name="description" content="Powered by Weddie - Create your Wedding Invitation today." />
+  <meta name="description" content="Process On Donstar." />
   
 
-  <meta name="author" content="Weddie">
-  <meta name="keywords" content="Wedding, Invitation, Smart, Trending, Weddie">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="author" content="WeddingFibo">
+  <meta name="keywords" content="Wedding, Invitation, Smart, Trending, WeddingFibo">
+  <meta http-equiv="x-ua-compatible" content="Donstar">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="apple-touch-icon" href="img/icon.png">
@@ -25,7 +25,7 @@
 
   <meta property="og:title" content='Sathyanarayanan Weds Shruthi' />
   <meta property="og:type" content="website" />
-  <meta property="og:site_name " content="Weddie" />
+  <meta property="og:site_name " content="WeddingFibo" />
 
 
   
@@ -41,7 +41,7 @@
   </script>
   <!-- Common Header End -->
 
-   <link href="https://weddie.netlify.app/css/style-fireworks.css" rel="stylesheet">
+   <link href="BAC.css" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Norican" rel="stylesheet">
 </head>
 <body>
@@ -110,7 +110,7 @@
     <hr class="d-flex fluid text-center firworks-yellow m-5">
 
     <div class="row justify-content-center mt-5 ml-3 mr-3">
-        <h1 class="couples-title text-center h1-responsive">Wedding Couple</h1>
+        <h1 class="couples-title text-center h1-responsive">Wedding💕Couple</h1>
     </div>
 
     <div id="section_couple" class="row justify-content-center mb-5 ml-1 mr-1">
